@@ -8,7 +8,7 @@
 #########################################################################
 
 package Term::Clui;
-$VERSION = '1.36';
+$VERSION = '1.42';
 my $stupid_bloody_warning = $VERSION;  # circumvent -w warning
 require Exporter;
 @ISA = qw(Exporter);
@@ -17,6 +17,16 @@ require Exporter;
 %EXPORT_TAGS = (ALL => [@EXPORT,@EXPORT_OK]);
 
 no strict; no warnings;
+
+my $have_Term_ReadKey = 1;
+my $have_Term_Size = 0;
+eval 'require "Term/ReadKey.pm"';
+if ($@) {
+	$have_Term_ReadKey = 0;
+	my $have_Term_Size = 1;
+	eval 'require "Term/Size.pm"';
+	if ($@) { $have_Term_Size = 0; }
+}
 
 # ------------------------ vt100 stuff -------------------------
 
@@ -29,15 +39,17 @@ $KEY_LEFT  = 0404;
 $KEY_RIGHT = 0405;
 $KEY_DOWN  = 0402;
 $KEY_ENTER = "\r";
-$KEY_ENTER .= '';  # circumvent stupid bloody -w warning
+$KEY_ENTER .= q{};  # circumvent stupid bloody -w warning
 $KEY_PPAGE = 0523;
 $KEY_NPAGE = 0522;
 $KEY_BTAB  = 0541;
 
 my $irow; my $icol;   # maintained by &puts, &up, &down, &left and &right
-sub puts   { my $s = join '', @_;
+sub puts   { my $s = join q{}, @_;
 	$irow += ($s =~ tr/\n/\n/);
-	if ($s =~ /\r$/) { $icol = 0; }   # should increment otherwise ...
+	if ($s =~ /\r\n?$/) { $icol = 0;
+	} else { $icol += length ($s);
+	}
 	print TTY $s;
 }
 # could terminfo sgr0, bold, rev, cub1, cuu1, cuf1, cud1 ...
@@ -58,68 +70,81 @@ sub red      { print TTY "\033[31m"; }
 sub green    { print TTY "\033[32m"; }
 sub blue     { print TTY "\033[34m"; }
 sub violet   { print TTY "\033[35m"; }
-my ($rin, $nfound, $timeleft);  # for use by select
+
+sub getc_wrapper { my $timeout = 0 + $_[$[];
+	if ($have_Term_ReadKey) {
+		return Term::ReadKey::ReadKey($timeout, *TTYIN);
+	} else {
+		#if ($timeout > 0.00001) {  # doesn't seem to work on openbsd...
+		#	my $rin = q{};
+		#	vec($rin,fileno(TTYIN),1) = 1;
+		#	my $nfound = select($rin, undef, undef, $timeout);
+		#	if (!$nfound) { return undef; }
+		#}
+		return getc(TTYIN);
+	}
+}
+
 sub getch {
-	my $c = getc(TTYIN);
+	my $c = getc_wrapper(0);
 	if ($c eq "\033") {
-		#($nfound, $timeleft)= select($rout=$rin, undef, undef, 0.05);
-		# warn "nfound=$nfound\n";  # always 0 on FreeBSD's cons25l1 :-(
-		#if (! $nfound) {return "\033"; }
-		$c = getc(TTYIN);
-		if ($c eq "A") { return($KEY_UP); }
-		if ($c eq "B") { return($KEY_DOWN); }
-		if ($c eq "C") { return($KEY_RIGHT); }
-		if ($c eq "D") { return($KEY_LEFT); }
-		if ($c eq "5") { getc(TTYIN); return($KEY_PPAGE); }
-		if ($c eq "6") { getc(TTYIN); return($KEY_NPAGE); }
-		if ($c eq "Z") { return($KEY_BTAB); }
-		if ($c eq "[") {
-			$c = getc(TTYIN);
-			if ($c eq "A") { return($KEY_UP); }
-			if ($c eq "B") { return($KEY_DOWN); }
-			if ($c eq "C") { return($KEY_RIGHT); }
-			if ($c eq "D") { return($KEY_LEFT); }
-			if ($c eq "5") { getc(TTYIN); return($KEY_PPAGE); }
-			if ($c eq "6") { getc(TTYIN); return($KEY_NPAGE); }
-			if ($c eq "Z") { return($KEY_BTAB); }
+		$c = getc_wrapper(0.10);
+
+		if (! defined $c) { return("\033"); }
+		if ($c eq 'A') { return($KEY_UP); }
+		if ($c eq 'B') { return($KEY_DOWN); }
+		if ($c eq 'C') { return($KEY_RIGHT); }
+		if ($c eq 'D') { return($KEY_LEFT); }
+		if ($c eq '5') { getc_wrapper(0); return($KEY_PPAGE); }
+		if ($c eq '6') { getc_wrapper(0); return($KEY_NPAGE); }
+		if ($c eq 'Z') { return($KEY_BTAB); }
+		if ($c eq '[') {
+			$c = getc_wrapper(0);
+			if ($c eq 'A') { return($KEY_UP); }
+			if ($c eq 'B') { return($KEY_DOWN); }
+			if ($c eq 'C') { return($KEY_RIGHT); }
+			if ($c eq 'D') { return($KEY_LEFT); }
+			if ($c eq '5') { getc_wrapper(0); return($KEY_PPAGE); }
+			if ($c eq '6') { getc_wrapper(0); return($KEY_NPAGE); }
+			if ($c eq 'Z') { return($KEY_BTAB); }
 			return($c);
 		}
 		return($c);
 	} elsif ($c eq ord(0217)) {
-		$c = getc(TTYIN);
-		if ($c eq "A") { return($KEY_UP); }
-		if ($c eq "B") { return($KEY_DOWN); }
-		if ($c eq "C") { return($KEY_RIGHT); }
-		if ($c eq "D") { return($KEY_LEFT); }
+		$c = getc_wrapper(0);
+		if ($c eq 'A') { return($KEY_UP); }
+		if ($c eq 'B') { return($KEY_DOWN); }
+		if ($c eq 'C') { return($KEY_RIGHT); }
+		if ($c eq 'D') { return($KEY_LEFT); }
 		return($c);
 	} elsif ($c eq ord(0233)) {
-		$c = getc(TTYIN);
-		if ($c eq "A") { return($KEY_UP); }
-		if ($c eq "B") { return($KEY_DOWN); }
-		if ($c eq "C") { return($KEY_RIGHT); }
-		if ($c eq "D") { return($KEY_LEFT); }
-		if ($c eq "5") { getc(TTYIN); return($KEY_PPAGE); }
-		if ($c eq "6") { getc(TTYIN); return($KEY_NPAGE); }
-		if ($c eq "Z") { return($KEY_BTAB); }
+		$c = getc_wrapper(0);
+		if ($c eq 'A') { return($KEY_UP); }
+		if ($c eq 'B') { return($KEY_DOWN); }
+		if ($c eq 'C') { return($KEY_RIGHT); }
+		if ($c eq 'D') { return($KEY_LEFT); }
+		if ($c eq '5') { getc_wrapper(0); return($KEY_PPAGE); }
+		if ($c eq '6') { getc_wrapper(0); return($KEY_NPAGE); }
+		if ($c eq 'Z') { return($KEY_BTAB); }
 		return($c);
 	} else {
 		return($c);
 	}
 }
 sub up    {
-	if ($_[$[] < 0) { &down($_[$[]); return; }
+	# if ($_[$[] < 0) { &down(0 - $_[$[]); return; }
 	print TTY "\033[A" x $_[$[]; $irow -= $_[$[];
 }
 sub down  {
-	if ($_[$[] < 0) { &up($_[$[]); return; }
+	# if ($_[$[] < 0) { &up(0 - $_[$[]); return; }
 	print TTY "\n" x $_[$[]; $irow += $_[$[];
 }
 sub right {
-	if ($_[$[] < 0) { &up($_[$[]); return; }
+	# if ($_[$[] < 0) { &left(0 - $_[$[]); return; }
 	print TTY "\033[C" x $_[$[]; $icol += $_[$[];
 }
 sub left  {
-	if ($_[$[] < 0) { &up($_[$[]); return; }
+	# if ($_[$[] < 0) { &right(0 - $_[$[]); return; }
 	print TTY "\033[D" x $_[$[]; $icol -= $_[$[];
 }
 sub goto { my $newcol = shift; my $newrow = shift;
@@ -131,54 +156,59 @@ sub goto { my $newcol = shift; my $newrow = shift;
 	} elsif ($newrow < $irow) { &up   ($irow-$newrow);
 	}
 }
-sub move { my ($ix,$iy) = @_; printf TTY "\033[%d;%dH",$iy+1,$ix+1; }
-my $initscr_already_run = 0; my $stty = '';
+# sub move { my ($ix,$iy) = @_; printf TTY "\033[%d;%dH",$iy+1,$ix+1; }
+
+my $initscr_already_run = 0; my $stty = q{};
+
 sub initscr {
 	if ($initscr_already_run) {
 		$icol = 0; $irow = 0; $initscr_already_run++; return;
 	}
 	open(TTY, ">/dev/tty")  || (warn "Can't write /dev/tty: $!\n", return 0);
-	$stty = `stty -g`; chop $stty;
+	if (!$have_Term_ReadKey) { $stty = `stty -g`; chop $stty; }
 	open(TTYIN, "</dev/tty") || (warn "Can't read /dev/tty: $!\n", return 0);
 
-	if ($^O =~ /^FreeBSD$/i) { system("stty -echo -icrnl raw </dev/tty");
-	} else { system("stty -echo -icrnl raw </dev/tty >/dev/tty");
+	if ($have_Term_ReadKey) {
+		Term::ReadKey::ReadMode('ultra-raw', *TTYIN);
+	} else {
+		if ($^O =~ /^FreeBSD$/i) { system("stty -echo -icrnl raw </dev/tty");
+		} else { system("stty -echo -icrnl raw </dev/tty >/dev/tty");
+		}
 	}
-	# system("stty -echo -icrnl raw </dev/tty");  # various old tries ...
-	# system("stty -echo -icrnl raw");
-	# if ($bsd) { system "stty cbreak </dev/tty >/dev/tty 2>&1";
-	# } else { system "stty", '-icanon'; system "stty", 'eol', "\001";
-	# }
 
 	select((select(TTY), $| = 1)[$[]); print TTY "";
-	$rin = ''; vec($rin, fileno(TTYIN), 1) = 1;
+	$rin = q{}; vec($rin, fileno(TTYIN), 1) = 1;
 	$icol = 0; $irow = 0; $initscr_already_run = 1;
 }
 sub endwin {
 	print TTY "\033[0m";
 	if ($initscr_already_run > 1) { $initscr_already_run--; return; }
-	close TTY; close TTYIN;
-	if ($^O =~ /^FreeBSD$/i) { system("stty $stty </dev/tty") if $stty;
-	} else { system("stty $stty </dev/tty >/dev/tty") if $stty;
+	if ($have_Term_ReadKey) {
+		Term::ReadKey::ReadMode('restore', *TTYIN);
+		close TTY; close TTYIN;
+	} else {
+		close TTY; close TTYIN;
+		if ($^O =~ /^FreeBSD$/i) { system("stty $stty </dev/tty") if $stty;
+		} else { system("stty $stty </dev/tty >/dev/tty") if $stty;
+		}
 	}
 	$initscr_already_run = 0;
 }
 
 # ----------------------- size handling ----------------------
 
-my ($must_use_tput, $maxcols, $maxrows); my $size_changed = 1;
+my ($maxcols, $maxrows); my $size_changed = 1;
 my ($otherlines, @otherlines, $notherlines);
-
-eval 'require "Term/Size.pm"';
-if ($@) { $must_use_tput = 1; }
 
 sub check_size {
 	if (! $size_changed) { return; }
-	if ($must_use_tput) {
+	if ($have_Term_ReadKey) {
+		($maxcols, $maxrows) = Term::ReadKey::GetTerminalSize(*STDERR);
+	} elsif ($have_Term_Size) {
+		($maxcols, $maxrows) = Term::Size::chars(*STDERR);
+	} else {
 		$maxcols = `tput cols`;
 		$maxrows = (`tput lines` + 0) || (`tput rows` + 0);
-	} else {
-		($maxcols, $maxrows) = &Term::Size::chars(*STDERR);
 	}
 	$maxcols = $maxcols || 80; $maxcols--;
 	$maxrows = $maxrows || 24;
@@ -201,13 +231,13 @@ sub ask_password { # no echo - use for passwords
 	local ($silent) = 'yes'; &ask ($_[$[]);
 }
 sub ask { my ($question, $default) = @_;
-	return '' unless $question;
+	return q{} unless $question;
 	&initscr(); my $nol = &display_question($question);
 
 	my $i = 0; my $n = 0; my @s = (); # cursor position, length, string
 	if ($default) {
 		$default =~ s/\t/	/g;
-		@s = split ('', $default); $n = scalar @s; $i = $[;
+		@s = split (q{}, $default); $n = scalar @s; $i = $[;
 		foreach $j ($[ .. $n) { &puts($s[$j]); }
 		&left($n);
 	}
@@ -228,7 +258,7 @@ sub ask { my ($question, $default) = @_;
 			  	&clrtoeol(); &left($n-$i);
 			}
 		} elsif ($c eq "\cC" || $c eq "\cX" || $c eq "\cD") {  # clear ...
-			&left($i); $i = 0; $n = 0; @s = (); &clrtoeol();
+			&left($i); $i = 0; $n = 0; &clrtoeol(); @s = ();
 		} elsif ($c eq "\cB") { &left($i); $i = 0;
 		} elsif ($c eq "\cE") { &right($n-$i); $i = $n;
 		} elsif ($c eq "\cL") {  # redraw ...
@@ -241,7 +271,7 @@ sub ask { my ($question, $default) = @_;
 		} else { &beep();
 		}
 	}
-	&endwin(); $silent = ''; return join("", @s);
+	&endwin(); $silent = q{}; return join("", @s);
 }
 
 # ----------------------- choose stuff -------------------------
@@ -261,13 +291,12 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 	# As from 1.22, allows multiple choice if called in array context
 
 	return unless @list;
-	grep (($_ =~ s/\n$//) && 0, @list);	# chop final \n if any
+	grep (($_ =~ s/[\r\n]+$//) && 0, @list);	# chop final newlines
 	my @biglist = @list; my $icell; @marked = ();
 
 	$question =~ s/^[\n\r]+//;   # strip initial newline(s)
 	$question =~ s/[\n\r]+$//;   # strip final newline(s)
-	my $firstline;
-	($firstline,$otherlines) = split ("\n", $question, 2);
+	my ($firstline,$otherlines) = split (/\r?\n/, $question, 2);
 	my $firstlinelength = length $firstline;
 
 	$choice = &get_default($firstline);
@@ -280,16 +309,16 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 	if (wantarray) {
 		$#marked = $#list;
 		if ($firstlinelength < $maxcols-30) {
-			&puts("$firstline (multiple choice with spacebar)\r\n");
+			&puts("$firstline (multiple choice with spacebar)\n\r");
 		} elsif ($firstlinelength < $maxcols-16) {
-			&puts("$firstline (multiple choice)\r\n");
+			&puts("$firstline (multiple choice)\n\r");
 		} elsif ($firstlinelength < $maxcols-9) {
-			&puts("$firstline (multiple)\r\n");
+			&puts("$firstline (multiple)\n\r");
 		} else {
-			&puts("$firstline\r\n");
+			&puts("$firstline\n\r");
 		}
 	} else {
-		&puts("$firstline\r\n");
+		&puts("$firstline\n\r");
 	}
 	if ($nrows >= $maxrows) {
 		@list = &narrow_the_search(@list);
@@ -343,13 +372,13 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 			$this_cell--; &wr_cell($this_cell+1);
 			&wr_cell($this_cell); 
 		} elsif ((($c eq "j") || ($c == $KEY_DOWN)) && ($irow < $nrows)) {
-			$mid_col = $icol[$this_cell] + 0.5 * $l[$this_cell];
+			$mid_col = $icol[$this_cell] + 0.5 * length($list[$this_cell]);
 			$left_of_target = 1000;
 			for ($inew=$this_cell+1; $inew < $#list; $inew++) {
 				last if $icol[$inew] < $mid_col;	# skip rest of row
 			}
 			for (; $inew < $#list; $inew++) {
-				$new_mid_col = $icol[$inew] + 0.5 * $l[$inew];
+				$new_mid_col = $icol[$inew] + 0.5*length($list[$inew]);
 				last if $new_mid_col >= $mid_col;		# we've reached it
 				last if $icol[$inew+1] <= $icol[$inew]; # we're at EOL
 				$left_of_target = $mid_col - $new_mid_col;
@@ -358,14 +387,14 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 			$iold = $this_cell; $this_cell = $inew;
 			&wr_cell($iold); &wr_cell($this_cell);
 		} elsif ((($c eq "k") || ($c == $KEY_UP)) && ($irow > 1)) {
-			$mid_col = $icol[$this_cell] + 0.5 * $l[$this_cell];
+			$mid_col = $icol[$this_cell] + 0.5*length($list[$this_cell]);
 			$right_of_target = 1000;
 			for ($inew=$this_cell-1; $inew > 0; $inew--) {
 				last if $irow[$inew] < $irow[$this_cell];	# skip rest of row
 			}
 			for (; $inew > 0; $inew--) {
 				last unless $icol[$inew];
-				$new_mid_col = $icol[$inew] + 0.5 * $l[$inew];
+				$new_mid_col = $icol[$inew] + 0.5*length($list[$inew]);
 				last if $new_mid_col < $mid_col;		 # we're past it
 				$right_of_target = $new_mid_col - $mid_col;
 			}
@@ -378,7 +407,8 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 				if ($nrows >= $maxrows) {
 					@list = &narrow_the_search(@list);
 					if (! @list) {
-						&up(1); &clrtoeol(); &endwin (); $clue_has_been_given = 0;
+						&up(1); &clrtoeol(); &endwin ();
+						$clue_has_been_given = 0;
 						return wantarray ? () : undef;
 					}
 				}
@@ -389,7 +419,9 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 			my @chosen;
 			if (wantarray) {
 				my $i; for ($i=$[; $i<=$#list; $i++) {
-					if ($marked[$i] || $i==$this_cell) { push @chosen, $list[$i]; }
+					if ($marked[$i] || $i==$this_cell) {
+						push @chosen, $list[$i];
+					}
 				}
 				&clrtoeol();
 				my $remaining = $maxcols-$firstlinelength;
@@ -422,7 +454,8 @@ sub choose {  local ($question, @list) = @_;  # @list must be local
 			if (wantarray) {
 				$marked[$this_cell] = !$marked[$this_cell];
 				if ($this_cell < $#list) {
-					$this_cell++; &wr_cell($this_cell-1); &wr_cell($this_cell); 
+					$this_cell++;
+					&wr_cell($this_cell-1); &wr_cell($this_cell); 
 				}
 			} elsif ($this_cell < $#list) {
 				$this_cell++; &wr_cell($this_cell-1); &wr_cell($this_cell); 
@@ -447,7 +480,8 @@ sub layout { my @list = @_;
 sub wr_screen {
 	my $i;
 	for ($i=$[; $i<=$#list; $i++) {
-		&wr_cell($i, $this_cell) unless $i==$this_cell;
+		# &wr_cell($i, $this_cell) unless $i==$this_cell;
+		&wr_cell($i) unless $i==$this_cell;
 	}
 	if ($notherlines && ($nrows+$notherlines) < $maxrows) {
 		&puts("\r\n", join("\r\n", @otherlines), "\r");
@@ -463,11 +497,9 @@ sub wr_cell { my $i = shift;
 	$no_tabs =~ s/^(.{1,77}).*/$1/;
 	&puts(" $no_tabs ");
 	if ($marked[$i] || $i == $this_cell) { &attrset($A_NORMAL); }
-	$icol += length ($no_tabs) + 2;
 }
 sub size_and_layout {
 	my $erase_rows = shift;
-	my $oldmaxrows = $maxrows;
 	&check_size();
 	if ($erase_rows) {
 		if ($erase_rows > $maxrows) { $erase_rows = $maxrows; } # XXX?
@@ -489,15 +521,18 @@ sub narrow_the_search { my @biglist = @_;
 			if ($nrows < $maxrows) { &erase_lines(1); return @list; }
 		}
 		if ($c == $KEY_LEFT && $i > 0) { $i--; &left(1); next;
-		} elsif ($c == $KEY_RIGHT) { if ($i < $n) { &puts($s[$i]); $i++; next; }
+		} elsif ($c == $KEY_RIGHT) {
+			if ($i < $n) { &puts($s[$i]); $i++; next; }
 		} elsif (($c eq "\cH") || ($c eq "\c?")) {
 			if ($i > 0) {
 			 	$n--; $i--; splice(@s, $i, 1); &left(1);
-			  	foreach $j ($i..$n) { &puts($s[$j]); } &clrtoeol(); &left($n-$i);
+			  	foreach $j ($i..$n) { &puts($s[$j]); }
+				&clrtoeol(); &left($n-$i);
 			}
-		# but these should do the "q for quit" job XXX
 		} elsif ($c eq "\cC" || $c eq "\cX" || $c eq "\cD") {  # clear ...
-			if (! @s) { $clue_has_been_given = 0; &erase_lines(1); return (); }
+			if (! @s) {   # 20070305 ?
+				$clue_has_been_given = 0; &erase_lines(1); return ();
+			}
 			&left($i); $i = 0; $n = 0; @s = (); &clrtoeol();
 		} elsif ($c eq "\cB") { &left($i); $i = 0; next;
 		} elsif ($c eq "\cE") { &right($n-$i); $i = $n; next;
@@ -523,18 +558,17 @@ sub narrow_the_search { my @biglist = @_;
 	warn "narrow_the_search: shouldn't reach here ...\n";
 }
 sub ask_for_clue { my ($nchoices, $i, $s) = @_;
-	my $headstr; my $tailstr;
 	if ($nchoices) {
 		if ($s) {
-			$headstr = "the choices won't fit; there are still";
-			$tailstr = "of them";
-			&goto(0,1); &puts("$headstr $nchoices $tailstr"); &clrtoeol();
+			my $headstr = "the choices won't fit; there are still";
+			&goto(0,1); &puts("$headstr $nchoices of them"); &clrtoeol();
 			&goto(0,2); &puts("lengthen the clue : "); &right($i);
 		} else {
-			$headstr = "the choices won't fit; there are";
-			$tailstr = "of them";
-			&goto(0,1); &puts("$headstr $nchoices $tailstr"); &clrtoeol();
-			&goto(0,2); &puts("   give me a clue : "); &right($i);
+			my $headstr = "the choices won't fit; there are";
+			&goto(0,1); &puts("$headstr $nchoices of them"); &clrtoeol();
+			&goto(0,2);
+			&puts("   give me a clue :            (or ctrl-X to quit)");
+			&left(30);
 		}
 	} else {
 		&goto(0,1); &puts("No choices fit this clue !"); &clrtoeol();
@@ -596,7 +630,9 @@ sub confirm { my $question = shift;  # asks user Yes|No, returns 1|0
 	return(0) unless $question;  return(0) unless -t STDERR;
 	&initscr();
 	my $nol = &display_question($question); &puts (" (y/n) ");
-	while (1) { $response=&getch();  last if ($response=~/[yYnN]/);  &beep(); }
+	while (1) {
+		$response=&getch();  last if ($response=~/[yYnN]/);  &beep();
+	}
 	&left(6); &clrtoeol(); 
 	if ($response=~/^[yY]/) { &puts("Yes"); } else { &puts("No"); }
 	&erase_lines(1); &endwin();
@@ -616,7 +652,7 @@ sub edit {	my ($title, $text) = @_;
 		$tmpdir = '/tmp';
 		($safename = $title) =~ s/[\W_]+/_/g;
 		$file = "$tmpdir/$safename.$$";
-		if (!open (F,"> $file")) {&sorry("can't open $file: $!\n");return '';}
+		if (!open (F,">$file")) {&sorry("can't open $file: $!\n");return q{};}
 		print F $text; close F;
 		$editor = $ENV{EDITOR} || "vi"; # should also look in ~/db/choices.db
 		system "$editor $file";
@@ -627,8 +663,8 @@ sub edit {	my ($title, $text) = @_;
 		my $file = $title;
 
 		# weed out no-go situations
-		if (-d $file)  { &sorry ("$file is already a directory\n"); return 0; }
-		if (-B _ && -s _)  { &sorry("$file is not a text file\n");  return 0; }
+		if (-d $file) {&sorry ("$file is already a directory\n"); return 0;}
+		if (-B _ && -s _) {&sorry("$file is not a text file\n"); return 0;}
 		if (-T _ && !-w _) { &view ($file); return 1; }
 	
 		# it's a writeable text file, so work out the locations
@@ -649,7 +685,9 @@ sub edit {	my ($title, $text) = @_;
 		if (-d _ && ! -w _) { $rcs_ok = 0;	warn "can't write in $rcsdir\n"; }
 	
 		# if the file doesn't exist, but the RCS does, then check it out
-		if ($rcs_ok && -f $rcsfile && !-f $file) {system "co -l $file $rcsfile";}
+		if ($rcs_ok && -f $rcsfile && !-f $file) {
+			system "co -l $file $rcsfile";
+		}
 
 		my $starttime = time;
 		$editor = $ENV{EDITOR} || "vi"; # should also look in ~/db/choices.db
@@ -729,7 +767,7 @@ sub view {	my ($title, $text) = @_;	# or ($filename) =
 		} else {
 			local ($safetitle); ($safetitle = $title) =~ s/[^a-zA-Z0-9]+/_/g;
 			local ($tmp) = "/tmp/$safetitle.$$";
-			if (! open (TMP, "> $tmp")) { warn "can't open $tmp: $!\n"; return; }
+			if (!open(TMP, ">$tmp")) {warn "can't open $tmp: $!\n"; return;}
 			print TMP $text;	close TMP;
 			system (($ENV{PAGER} || $default_pager) . " \'$tmp\'");
 			unlink $tmp;
@@ -787,7 +825,7 @@ sub display_question {   my $question = shift; my %options = @_;
 	return scalar @otherlines;
 }
 sub erase_lines {  # leaves cursor at beginning of line $_[$[]
-	&goto(0, $_[$[]); &puts("\e[J");
+	&goto(0, $_[$[]); print TTY "\e[J";
 }
 sub fmt { my $text = shift; my %options = @_;
 	# Used by tiview, ask and confirm; formats the text within $maxcols cols
@@ -796,7 +834,7 @@ sub fmt { my $text = shift; my %options = @_;
 	@i_lines = split (/\r?\n/, $text);
 	foreach $i_line (@i_lines) {
 		if ($i_line =~ /^\s*$/) {   # blank line ?
-			if ($o_line) { push @o_lines, $o_line; $o_line=''; $o_length=0; }
+			if ($o_line) { push @o_lines, $o_line; $o_line=q{}; $o_length=0; }
 			if (! $last_line_empty) { push @o_lines,""; $last_line_empty=1; }
 			next;
 		}
@@ -810,7 +848,7 @@ sub fmt { my $text = shift; my %options = @_;
 			if ($o_line) { push @o_lines, $o_line; }
 			$o_line = $initial_space; $o_length = length $initial_space;
 		} else {
-			$initial_space = '';
+			$initial_space = q{};
 		}
 
 		@i_words = split (' ', $i_line);
