@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $bindir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.06';
+my $version = '1.07';
 ($libdir, $bindir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -257,11 +257,11 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 1348,
-		'Changes', 659,
+		'Changes', 727,
 		'MANIFEST', 86,
-		'Evol.pm', 17947,
+		'Evol.pm', 19562,
 		'bin/ps_evol', 3795,
-		'Clui', 27374,
+		'Clui', 27866,
 		'test.pl', 3647,
 	);
 
