@@ -10,3 +10,4 @@
 20040809 1.04 'perl Install' works better on solaris without Term::Size
 20050122 1.05 test.pl uses Test::Simple
 20051104 1.06 reject 1st rand call, minor pod improvements
+20090617 1.07 convergence criteria documented, and can be undefined
